--- a/index.html
+++ b/index.html
@@ -69,12 +69,10 @@
           <img src="./img/cacade.svg" alt="" />
           <h2>Ciber Segurança</h2>
           <p>
-            A venda de sites refere-se ao processo de transferência de
-            propriedade de um site da parte atual para um comprador, geralmente
-            envolvendo a negociação e a transferência de domínio, conteúdo e
-            outros ativos relacionados ao site. Esse processo pode incluir a
-            venda de sites inteiros ou partes específicas, como domínios e
-            conteúdo
+            A cibersegurança é voltada para softwares, hardwares e redes.
+            Ou seja, cuida para que o sistema da empresa não permita ataques
+            cibernéticos. Ela previne problemas com a gestão de informações que
+            é feita pelas máquinas, no trânsito e armazenamento de dados entre elas.
           </p>
         </div>
         <div class="servico">
@@ -83,12 +81,8 @@
             alt="" />
           <h2>Hospedagem</h2>
           <p>
-            A venda de sites refere-se ao processo de transferência de
-            propriedade de um site da parte atual para um comprador, geralmente
-            envolvendo a negociação e a transferência de domínio, conteúdo e
-            outros ativos relacionados ao site. Esse processo pode incluir a
-            venda de sites inteiros ou partes específicas, como domínios e
-            conteúdo
+            Hospedagem de sites é um serviço online que permite que o conteúdo do seu site fique acessível na internet.
+            Ao comprar um plano de hospedagem, você está alugando espaço num servidor físico para armazenar todos os seus dados e arquivos.
           </p>
         </div>
         <div class="servico">
@@ -97,12 +91,9 @@
             alt="" />
           <h2>E-comerce</h2>
           <p>
-            A venda de sites refere-se ao processo de transferência de
-            propriedade de um site da parte atual para um comprador, geralmente
-            envolvendo a negociação e a transferência de domínio, conteúdo e
-            outros ativos relacionados ao site. Esse processo pode incluir a
-            venda de sites inteiros ou partes específicas, como domínios e
-            conteúdo
+            Comércio eletrônico ou comércio eletrónico, e-commerce, comércio virtual ou venda não-presencial,
+            é um tipo de transação comercial feita especialmente através de um equipamento eletrônico, como,
+            por exemplo, computadores, tablets e smartphones, baseadas em dois conceitos fundamentais o B2B e o B2C.
           </p>
         </div>
         <div class="servico">
@@ -111,12 +102,8 @@
             alt="" />
           <h2>Investigação digital</h2>
           <p>
-            A venda de sites refere-se ao processo de transferência de
-            propriedade de um site da parte atual para um comprador, geralmente
-            envolvendo a negociação e a transferência de domínio, conteúdo e
-            outros ativos relacionados ao site. Esse processo pode incluir a
-            venda de sites inteiros ou partes específicas, como domínios e
-            conteúdo
+            A investigação digital é associada aos crimes de informática, esta área é responsável pela recuperação e análise de dados digitais.
+            É por meio da investigação digital que ajuda a criar métricas para identificar crimes cibernético.
           </p>
         </div>
       </div>
