--- a/index.html
+++ b/index.html
@@ -111,21 +111,15 @@
 
   </section>
 
-  <section>
+  <section id="Contato">
     <div class="contato">
     <h2>Contato</h2>
-
-    <div class="grid icons">
-    <a target="_blank" href="https://github.com/esdras10004">
-      <i class="fab fa-github"></i>
-    </a>
     <a target="_blank" href="mailto:KANEOT-WEB@gmail.com">
-      <i class="fas fa-at"></i>
+      <BR>
+      KANEOT-WEB@gmail.com
+      <BR><BR>
+      <a href="tel:+5571999999999">Clique aqui para ligar para (81) 99999-9999</a>
     </a>
-    <a target="_blank" href="https://instagram.com/KANEOT-WEB">
-      <i class="fab fa-instagram"></i>
-    </a>
-    
   </div>
   </div>
   </section>
