--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
   </section>
 
-  <section id="Contato">
+  <section id="contato">
     <div class="contato">
     <h2>Contato</h2>
     <a target="_blank" href="mailto:KANEOT-WEB@gmail.com">
