--- a/index.html
+++ b/index.html
@@ -32,19 +32,23 @@
   <section class="sobre" id="sobre">
     <H1>Quem somos</H1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget mi ut orci dictum efficitur. Fusce
-      ullamcorper nisi a orci scelerisque consectetur. Suspendisse molestie ut sem in placerat. Mauris tincidunt erat
-      quis dui interdum pulvinar eget eget enim. In hac habitasse platea dictumst. Nunc euismod felis lectus. Proin eget
-      velit condimentum leo finibus volutpat quis ut enim. Fusce viverra eleifend arcu a interdum. Etiam eget nulla
-      justo. Vivamus imperdiet eros quis arcu condimentum dictum. Donec dignissim pellentesque tristique. Donec
-      convallis sed sem vitae pellentesque. Mauris vel eros est.<BR>
+      Nossa empresa faz tudo que envolve criação de site, fazemos também ciber segurança e investigações digital. Nós temos total capacidade pra fazer o que fazemos, contamos com diversos profissionais<BR>
     </p>
     <p>
-      Morbi nec accumsan eros, nec aliquet tortor. Integer varius, quam a feugiat dignissim, nisi risus vehicula diam,
-      id porta ante velit et neque. Sed mauris sem, posuere in justo eu, egestas aliquet massa. Praesent semper
-      pellentesque tempor. Nam in purus sem. Integer tristique a orci ut congue. Nam nisl nisi, gravida vel justo
-      efficitur, accumsan mattis est. Nullam maximus suscipit accumsan. Nam odio eros, faucibus eu nibh eu, faucibus
-      cursus leo. Duis ut mi magna. Nulla quis suscipit nisi. Proin at metus pretium, gravida sem in, dictum erat.
+      KANEOT é uma empresa presente em toda WEB<br>
+<br>
+Meta: Reconhecimento Global <br>
+<br>
+Nossos Funcionários <br>
+<br>
+Pedro Vinicius ( CEO )<br>
+Esdras Araujo ( DEV )<br>
+Luis Miguel (DESIGNER )<br>
+Carlos Vitor (PRODUTOR )<br>
+Izabelly Luiza ( ANALISTA DE MARKETING )<br>
+Marylia Theresa ( ANALISTA DE MARKETING )<br>
+Renato Holanda ( PRODUTOR COMERCIAL )<br>
+Brian Diego ( GERENTE COMERCIAL )<br>
     </p>
   </section>
 
@@ -72,7 +76,7 @@
             A cibersegurança é voltada para softwares, hardwares e redes.
             Ou seja, cuida para que o sistema da empresa não permita ataques
             cibernéticos. Ela previne problemas com a gestão de informações que
-            é feita pelas máquinas, no trânsito e armazenamento de dados entre elas.
+            é feita pelas máquinas, no trânsito e armazenamento de dados entre elas.
           </p>
         </div>
         <div class="servico">
@@ -82,7 +86,7 @@
           <h2>Hospedagem</h2>
           <p>
             Hospedagem de sites é um serviço online que permite que o conteúdo do seu site fique acessível na internet.
-            Ao comprar um plano de hospedagem, você está alugando espaço num servidor físico para armazenar todos os seus dados e arquivos.
+            Ao comprar um plano de hospedagem, você está alugando espaço num servidor físico para armazenar todos os seus dados e arquivos.
           </p>
         </div>
         <div class="servico">
@@ -93,7 +97,7 @@
           <p>
             Comércio eletrônico ou comércio eletrónico, e-commerce, comércio virtual ou venda não-presencial,
             é um tipo de transação comercial feita especialmente através de um equipamento eletrônico, como,
-            por exemplo, computadores, tablets e smartphones, baseadas em dois conceitos fundamentais o B2B e o B2C.
+            por exemplo, computadores, tablets e smartphones, baseadas em dois conceitos fundamentais o B2B e o B2C.
           </p>
         </div>
         <div class="servico">
@@ -103,7 +107,7 @@
           <h2>Investigação digital</h2>
           <p>
             A investigação digital é associada aos crimes de informática, esta área é responsável pela recuperação e análise de dados digitais.
-            É por meio da investigação digital que ajuda a criar métricas para identificar crimes cibernético.
+            É por meio da investigação digital que ajuda a criar métricas para identificar crimes cibernético.
           </p>
         </div>
       </div>
